[gd_scene load_steps=4 format=3 uid="uid://vmvsjailhjjs"]

[ext_resource type="Script" path="res://scripts/goblins_vs_fishfolk.gd" id="1_yg1jx"]
[ext_resource type="PackedScene" uid="uid://dhw0txm3hlokt" path="res://scenes_2d/main_menus/title_screen.tscn" id="2_6h760"]
[ext_resource type="PackedScene" uid="uid://vnxpe45dqhh" path="res://scenes_2d/main_menus/pause_menu.tscn" id="3_dubeo"]

[node name="GoblinsVsFishfolk" type="Node"]
script = ExtResource("1_yg1jx")

[node name="StageHolder" type="Node" parent="."]

[node name="TitleScreen" parent="." instance=ExtResource("2_6h760")]

[node name="PauseMenu" parent="." instance=ExtResource("3_dubeo")]
process_mode = 2
visible = false

[connection signal="close_title_screen" from="TitleScreen" to="." method="_on_title_screen_close_title_screen"]
[connection signal="toggle_stage_select_test" from="TitleScreen" to="." method="_on_title_screen_toggle_stage_select_test"]
